# buyme_project

./: .gitignore  pyproject.toml
pages/: Home_Page.py  Login_page.py  Pick_Business_Page.py  Selection_Page.py
tests/: test_buyme.py
